# KeyVeil

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: scenarios.py  web_server.py
demo/static/: app.js  index.html
docs/: ARCHITECTURE.md  SECURITY_MODEL.md
src/agent_wallet/: approval.py  audit_receipt.py  budget_store.py  cli.py  flow.py  policy_engine.py  session_scope.py
tests/: test_api.py  test_demo_scenarios.py  test_policy.py
