[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "keyveil-policy"
version = "0.3.0"
description = "Fail-closed policy decisions, atomic budget reservations, and hashed receipts for AI-agent payment intents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Fanrui Kong" }]
keywords = ["ai-agents", "payments", "policy-engine", "audit", "fintech"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
demo = [
  "fastapi>=0.115,<0.140",
  "pydantic>=2.8,<3",
  "uvicorn>=0.30,<1",
]
dev = [
  "fastapi>=0.115,<0.140",
  "httpx2>=2,<3",
  "pydantic>=2.8,<3",
  "pytest>=8,<10",
  "ruff>=0.11,<1",
  "uvicorn>=0.30,<1",
]

[project.urls]
Homepage = "https://github.com/LASZLO-Quantification/KeyVeil"
Documentation = "https://github.com/LASZLO-Quantification/KeyVeil/tree/main/docs"
Issues = "https://github.com/LASZLO-Quantification/KeyVeil/issues"
Source = "https://github.com/LASZLO-Quantification/KeyVeil"

[project.scripts]
keyveil = "agent_wallet.cli:main"
keyveil-dashboard = "demo.web_server:main"

[tool.setuptools]
packages = ["agent_wallet", "demo"]

[tool.setuptools.package-dir]
agent_wallet = "src/agent_wallet"
demo = "demo"

[tool.setuptools.package-data]
demo = ["static/*.html", "static/*.css", "static/*.js", "static/*.svg"]
agent_wallet = ["py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
